email upsert: minor tweaks during testing